--- a/style.css
+++ b/style.css
@@ -86,16 +86,16 @@
 
 
 
-#squarecontainer{
-    text-align: center;
-}
+
 
 #square1{
 	
     display: inline-block;
     text-align: left;
     position: relative;
-    margin-right: 150px;
+    margin-right: 120px;
+    margin-left: 150px;
+
     height: 310px;
     width: 550px;
     margin-top: 0px;
@@ -118,11 +118,12 @@
 #square3{
 	display: inline-block;
     text-align: left;
+    margin-left: 150px;
     position: relative;
     margin-right: 150px;
     height: 0px;
     width: 500px;
-    margin-top: 0px;
+    margin-top: 50px;
     background-color: #fff;
    
     
@@ -160,17 +161,6 @@
     font-size: 17px;
     color: #808080;
 }
-	
-		
-.frame {
-  width: 300px;
-  height: 250px;
-  border: 3px solid #ccc;
-  background: #eee;
-  margin: auto;
-  padding: 15px 10px;
-	}
-
 
 
 h2 span {
@@ -250,12 +240,13 @@ h2 span {
 		position: absolute;
 		top: 0;
 		left: 0;
+
 		display: block;
 		width: 100%;
 		height: 100%;
-		background: linear-gradient(to top, #000, transparent );
+		background: linear-gradient(to top, black, transparent );
 		z-index: 2;
-		transition: 0.5s;
+		transition: 0.6s;
 		opacity: 0;
 
 
@@ -275,7 +266,7 @@ h2 span {
 
          position: relative;
          z-index: 3;
-         color: #fff;
+         color: white;
          opacity: 0;
          transform: translateY(60px);
          transition: 0.5s;
@@ -292,12 +283,19 @@ h2 span {
 
 	}
 
-	.tekst_overlay p{
+	.tekst_overlay h3{
 	
 		font-size: 20px;
 		margin-top: 8px;
 		margin-left: 0;
-		font-family: monospace;
+		font-family: sans-serif;
+	}
+	.tekst_overlay p{
+	
+		font-size: 15px;
+		margin-top: 8px;
+		margin-left: 0;
+		font-family: sans-serif;
 	}
 
 	.tekst_overlay a i{
