--- a/css/home.css
+++ b/css/home.css
@@ -98,7 +98,8 @@
 }
 
 .about_us__article-title,
-.luxury_house__article-title {
+.luxury_house__article-title,
+.flinders_street__station-title {
   font-size: 3em;
 }
 
@@ -110,7 +111,8 @@
 .about_us__article-title,
 .about_us__article-info-house,
 .about_us__article-info-plans,
-.luxury_house__article-title {
+.luxury_house__article-title,
+.flinders_street__station-title {
   padding: 30px 0;
 }
 
@@ -226,5 +228,25 @@
 }
 
 .luxury_house__article-paragraph {
+  line-height: 1.5;
+}
+
+.flinders_street__station {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 150px;
+}
+.flinders_street__station__aside {
+  padding-left: 100px;
+}
+
+.flinders_street__station-line {
+  width: 100px;
+  height: 8px;
+  margin-bottom: 20px;
+  background-color: #2d2d2d;
+}
+
+.flinders_street__station-paragraph {
   line-height: 1.5;
 }
