--- a/css/home.css
+++ b/css/home.css
@@ -116,7 +116,8 @@
 
 .about_us__article-info,
 .latest_news__article-news,
-.special-prices__article-offers {
+.special-prices__article-offers,
+.footer-content {
   display: flex;
   justify-content: space-between;
 }
@@ -405,4 +406,8 @@
   bottom: 0;
   margin-top: 10px;
   background: #dadada;
+}
+
+.footer {
+  background-color: #1d1d1d;
 }
