--- a/about.css
+++ b/about.css
@@ -2,8 +2,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-
 }
+
 
 
 
@@ -184,8 +184,6 @@ margin-bottom: 20px;
 
 }
 
-
-
 .about_us__article-heading:after {
     
 content: "";
@@ -198,8 +196,6 @@ margin-top: -7px;
 padding-top: 15px;
 
 }
-
-
 
 .article-title{
     
@@ -220,10 +216,6 @@ font-size: 17px;
 color: #808080;
        
 }
-
-
-
-
 
 
 
@@ -361,15 +353,12 @@ color: #808080;
     font-size: 30px;
     text-align: left;
     font-weight: 600;
-    
 }
 
 .cmimi{
     font-family: sans-serif;
     font-size: 30px;
     box-shadow:0 0 5px gray;
-
-
 }
 
 .m_katror{
@@ -377,7 +366,6 @@ color: #808080;
     padding: 5px;
     font-size: 25px;
     border-bottom: 1px solid lightgray ;
-
 }
 
 .box:hover{
@@ -385,7 +373,6 @@ color: #808080;
     cursor: pointer;
     transform: scale(1.03);
     transition: all 0.5s ease ;
-
 }
 
 .box2:hover{
@@ -399,6 +386,51 @@ color: #808080;
 
 
 
+
+
+
+
+/*Pjesa e fundit, para footerit, "Great Clients" me foto levizese.*/
+
+
+.heading {
+            position: relative;
+            text-transform: uppercase;
+            display: inline-block;
+            font-size: 16px;
+            font-weight: 600;
+            color: #fff;
+            line-height: 130%;
+            background: #bda87f;
+            letter-spacing: 1.5px;
+            padding: 10px 15px;
+            margin-bottom: 20px;
+            margin-left: 150px;
+      
+        }
+          
+              
+.heading:after {
+            content: "";
+            position: absolute;
+            display: block;
+            border-bottom: 2px solid #bda87f;
+            width: 590px;
+            margin-left: -590px;
+            margin-top: -7px;
+            padding-top: 15px;
+        }
+        
+        
+.article-titll{
+    
+            text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
+            font-size: 3em;
+            padding: 30px 0;
+            font-family: Montserrat;
+            font-weight: bold;
+            margin-left: 150px;
+       }
 
 
 
