--- a/blog_grid.css
+++ b/blog_grid.css
@@ -3,8 +3,9 @@
     font-family: "Montserrat", sans-serif;
     margin: 0;
     padding: 0;
-
 }
+
+
 
 /* Pjesa e headerit */
       .wrapper {
@@ -61,16 +62,16 @@
 
 
 
-   /* Pjesa e prezantimit te faqes Blog Grid      */
+/* Pjesa e prezantimit te faqes Blog Grid      */
 
-  .nalt{
-	     text-align: center;
+.nalt{
+	 text-align: center;
          font-size: 50px;
          height: 100px;
          font-weight: normal;
          text-shadow: -4px 20px 0px rgba(255,255,255,0.19);
-	     color: white;
-	     font-family: palatino;
+	 color: white;
+	 font-family: palatino;
          display: flex;
          align-items: center;
          justify-content: center;
@@ -78,14 +79,14 @@
 }
 .posht{
 	
-	    letter-spacing: 12px;
-        font-size: 17px;
-        color: white;
-	    vertical-align: text-top;
-	    text-align: center;
-	    height: 100px;
-	    font-family: garamond;
-	    font-weight: normal;
+	 letter-spacing: 12px;
+         font-size: 17px;
+         color: white;
+	 vertical-align: text-top;
+	 text-align: center;
+	 height: 100px;
+	 font-family: garamond;
+	 font-weight: normal;
 }
 
        
@@ -105,8 +106,7 @@
             padding: 10px 15px;
             margin-bottom: 20px;
         }
-          
-              
+   
 .article-heading:after {
             content: "";
             position: absolute;
@@ -117,7 +117,6 @@
             margin-top: -7px;
             padding-top: 15px;
         }
-        
         
 .article-title{
     
@@ -132,7 +131,9 @@
           
 
 
-        /* Dizajni per permbajtjen brenda, kurse dizajnin e vet box e kemi ba ne <head> */
+
+
+/* Dizajni per permbajtjen brenda, kurse dizajnin e vet box e kemi ba ne <head> */
       
 .Emri_box{
     font-family: sans-serif;
@@ -186,3 +187,46 @@
     transition: all 0.5s ease ;
 
 }
+
+
+
+
+
+
+/*Pjesa e fundit, para footerit, "Great Clients" me foto levizese.*/
+
+.heading {
+            position: relative;
+            text-transform: uppercase;
+            display: inline-block;
+            font-size: 16px;
+            font-weight: 600;
+            color: #fff;
+            line-height: 130%;
+            background: #bda87f;
+            letter-spacing: 1.5px;
+            padding: 10px 15px;
+            margin-bottom: 20px;
+            margin-left: 150px;
+      }
+          
+.heading:after {
+            content: "";
+            position: absolute;
+            display: block;
+            border-bottom: 2px solid #bda87f;
+            width: 590px;
+            margin-left: -590px;
+            margin-top: -7px;
+            padding-top: 15px;
+        }
+        
+.article-titll{
+    
+            text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
+            font-size: 3em;
+            padding: 30px 0;
+            font-family: Montserrat;
+            font-weight: bold;
+            margin-left: 150px;
+        }
