--- a/blog_list.css
+++ b/blog_list.css
@@ -1,6 +1,5 @@
 *{
     box-sizing: border-box;
-   
     margin: 0;
     padding: 0;
 
@@ -61,31 +60,31 @@
 
 
 
-   /* Pjesa e prezantimit te faqes Blog Grid      */
+ 
+
+/* Pjesa e prezantimit te faqes Blog Grid      */
 
   .nalt{
-	     text-align: center;
+	 text-align: center;
          font-size: 50px;
          height: 100px;
          font-weight: normal;
          text-shadow: -4px 20px 0px rgba(255,255,255,0.19);
-	     color: white;
-	     font-family: palatino;
+	 color: white;
+	 font-family: palatino;
          display: flex;
          align-items: center;
          justify-content: center;
-
 }
 .posht{
-	
-	    letter-spacing: 12px;
-        font-size: 17px;
-        color: white;
-	    vertical-align: text-top;
-	    text-align: center;
-	    height: 100px;
-	    font-family: garamond;
-	    font-weight: normal;
+	  letter-spacing: 12px;
+          font-size: 17px;
+          color: white;
+	  vertical-align: text-top;
+	  text-align: center;
+	  height: 100px;
+	  font-family: garamond;
+	  font-weight: normal;
 }
 
 
@@ -95,7 +94,6 @@
     padding: 80px 0;
     background-color: #fff;
 }
-
 .container_ {
     width: 80%;
     padding-right: 15px;
@@ -104,80 +102,33 @@
     margin-left: auto;
 }
 
+
+
  
-.blog-list {
-    position: relative;
-    border: 2px solid #eee;
-    border-radius: 10px;
-    transition-duration: .3s;
-    background: #fff;
-    font-size: 15px;
-}
-
-
-.blog-list{
-    overflow: hidden;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
 
 .column1 {
     width: 65%;
-    float: left;
-    position: relative;
-   
-
-}
+    }
 
 .blog-list img {
     width: 100%;
     height: auto;
+    border-radius: 20px 0  0 20px;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
- 
-}
-img {
-    vertical-align: middle;
-}
 
-img {
-    border: 0;
-    border-top-color: initial;
-    border-top-style: initial;
-    border-top-width: 0px;
-    border-right-color: initial;
-    border-right-style: initial;
-    border-right-width: 0px;
-    border-bottom-color: initial;
-    border-bottom-style: initial;
-    border-bottom-width: 0px;
-    border-left-color: initial;
-    border-left-style: initial;
-    border-left-width: 0px;
-    border-image-source: initial;
-    border-image-slice: initial;
-    border-image-width: initial;
-    border-image-outset: initial;
-    border-image-repeat: initial;
-}
+
 
 .column2 {
     width: 35%;
-    float: left;
-    position: relative;
-    min-height: 1px;
     padding-right: 15px;
     padding-left: 30px;
-
 }
 
 
+/*Dizajni i butonave ne krye te <div class="column2">*/
 .butoni {
-
-   padding: 7px  17px;
+    padding: 7px  17px;
     margin: 5px;
     font-size: 13px;
     font-weight: bold;
@@ -186,25 +137,24 @@ img {
     border: none;
     border-radius: 50px;
     font-family: Montserrat;
-
-  }
-  
-  .butoni:hover {
+}
+.butoni:hover {
     background: #bda87f;
     color: #fff;
     transition-duration: 0.3s;
   }
 
 
-  .blog-list-teksti {
 
+
+/*Teksti i pershkrimit*/
+.blog-list-teksti {
      font-family: 'Montserrat' , sans-serif;
      letter-spacing: 1px;
-    font-size: 25px;
-    text-decoration: none;
-    color: #000 ;
-    
-  }
+     font-size: 25px;
+     text-decoration: none;
+     color: #000 ;
+    }
 
   p{
     font-family: 'Montserrat' ;
@@ -213,10 +163,16 @@ img {
     padding-bottom: 10px;
   }
  
+
+
+
+
+
+/*
+Row eshte klasa e div-it qe permban linkun Admin, daten dhe butonin Read More*/
  .row{
     display: flex;
     justify-content: center;
-    align-items: center;
     padding-bottom: 10px;
     border-bottom: 1px solid #ebebe0;
 
@@ -230,18 +186,22 @@ img {
      font-style: italic;
 }
 
- }
- .Admin:hover{
-
-    color: #000;
-    transition-duration: 0.3s;
+.Admin:hover{
+     color: #000;
+     transition-duration: 0.3s;
  }
 
 .date{
-    color:#bda87f ;
+     color:#bda87f ;
      font-family: 'Montserrat' , sans-serif;
      font-style: italic;
 }
+
+
+
+
+
+/*Butoni 2 eshte butoni i Read More*/
 
 .butoni2 {
     align-items: center;
@@ -252,9 +212,7 @@ img {
     background: #bda87f;
     border: none;
     border-radius: 50px;
-
-
-  }
+}
   
   .butoni2:hover {
     background: #000;
@@ -265,3 +223,49 @@ img {
   .butoni2:hover:after {
     content: " →";
   }
+
+
+
+
+
+
+/*Pjesa e fundit, para footerit, "Great Clients" me foto levizese.*/
+
+.heading {
+            position: relative;
+            text-transform: uppercase;
+            display: inline-block;
+            font-size: 16px;
+            font-weight: 600;
+            color: #fff;
+            line-height: 130%;
+            background: #bda87f;
+            letter-spacing: 1.5px;
+            padding: 10px 15px;
+            margin-bottom: 20px;
+            margin-left: 150px;
+      
+        }
+          
+              
+.heading:after {
+            content: "";
+            position: absolute;
+            display: block;
+            border-bottom: 2px solid #bda87f;
+            width: 590px;
+            margin-left: -590px;
+            margin-top: -7px;
+            padding-top: 15px;
+        }
+        
+        
+.article-titll{
+    
+            text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
+            font-size: 3em;
+            padding: 30px 0;
+            font-family: Montserrat;
+            font-weight: bold;
+            margin-left: 150px;
+        }
