--- a/about.css
+++ b/about.css
@@ -1,438 +1,421 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
-
-
-
 
 /* Pjesa e headerit */
 
 .wrapper {
-max-width: 1200px;
-margin: 0 auto;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .header,
 .navbar {
-display: flex;
-justify-content: space-between;
-align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header {
-padding: 10px 0;
+  padding: 10px 0;
 }
 
 .dropdown .dropdown__main a {
-font-size: 14px;
-text-decoration: none;
-padding: 33px 20px;
-color: black;
-background-color: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
+  text-decoration: none;
+  padding: 33px 20px;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .dropdown-content {
-display: none;
-position: absolute;
-margin-top: 33px;
-min-width: 160px;
-background-color: rgba(255, 255, 255, 0.7);
-box-shadow: 0px 3px 5px -1px #ccc;
-z-index: 1;
+  display: none;
+  position: absolute;
+  margin-top: 33px;
+  min-width: 160px;
+  background-color: rgba(255, 255, 255, 0.7);
+  box-shadow: 0px 3px 5px -1px #ccc;
+  z-index: 1;
 }
 
 .dropdown-content a {
-display: block;
-padding: 12px 16px;
-color: black;
-text-decoration: none;
-text-align: left;
-font-size: 12px;
+  display: block;
+  padding: 12px 16px;
+  color: black;
+  text-decoration: none;
+  text-align: left;
+  font-size: 12px;
 }
 
 .dropdown:hover .dropdown-content {
-display: block;
+  display: block;
 }
 
 .dropdown__main a:hover,
 .dropdown-content a:hover {
-color: rgb(73, 62, 224);
+  color: rgb(73, 62, 224);
 }
 
+/* Pjesa e prezantimit te faqes About Us      */
 
-
-
-
-
-
-
-
-
- /* Pjesa e prezantimit te faqes About Us      */
-
-.nalt{
-text-align: center;
-font-size: 50px;
-height: 100px;
-font-weight: normal;
-text-shadow: -4px 20px 0px rgba(255,255,255,0.19);
-color: white;
-font-family: palatino;
-display: flex;
-align-items: center;
-justify-content: center;
+.nalt {
+  text-align: center;
+  font-size: 50px;
+  height: 100px;
+  font-weight: normal;
+  text-shadow: -4px 20px 0px rgba(255, 255, 255, 0.19);
+  color: white;
+  font-family: palatino;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
-.posht{
-letter-spacing: 12px;
-font-size: 17px;
-color: white;
-vertical-align: text-top;
-text-align: center;
-height: 100px;
-font-family: garamond;
-font-weight: normal;
+.posht {
+  letter-spacing: 12px;
+  font-size: 17px;
+  color: white;
+  vertical-align: text-top;
+  text-align: center;
+  height: 100px;
+  font-family: garamond;
+  font-weight: normal;
 }
-
-
-
-
-
-
-
-
-
-
 
 /* Pjesa e brendshme e perbere me 4 squares  */
 
-#square1{
-display: inline-block;
-text-align: left;
-position: relative;
-margin-left: 150px;
-height: 310px;
-width: 550px;
-margin-top: 0px;
-background-color: #fff;
+#square1 {
+  display: inline-block;
+  text-align: left;
+  position: relative;
+  margin-left: 150px;
+  height: 310px;
+  width: 550px;
+  margin-top: 0px;
+  background-color: #fff;
 }
 
-
-#square2{
-display: inline-block;
-position: relative;
-height: 310px;
-margin-left: 50px;
-width: 500px;
-margin-top: 0px;
-background-color: #fff;
+#square2 {
+  display: inline-block;
+  position: relative;
+  height: 310px;
+  margin-left: 50px;
+  width: 500px;
+  margin-top: 0px;
+  background-color: #fff;
 }
 
-
-#square3{
-display: inline-block;
-text-align: left;
-margin-left: 150px;
-position: relative;
-margin-right: 150px;
-height: 0px;
-width: 500px;
-margin-top: 50px;
-background-color: #fff;
+#square3 {
+  display: inline-block;
+  text-align: left;
+  margin-left: 150px;
+  position: relative;
+  margin-right: 150px;
+  height: 0px;
+  width: 500px;
+  margin-top: 50px;
+  background-color: #fff;
 }
 
-
-#square4{
-display: inline-block;
-position: relative;
-height: 0px;
-margin-left: 50px;
-width: 550px;
-margin-top: 0px;
-background-color: #fff;
+#square4 {
+  display: inline-block;
+  position: relative;
+  height: 0px;
+  margin-left: 50px;
+  width: 550px;
+  margin-top: 0px;
+  background-color: #fff;
 }
-
-
-
-
-
-
-
-
-
-
 
 /* Dizajni i headings ne çdo artikull si psh. About Us, Professional Team dhe Special Prices */
 
 .about_us__article-heading {
-    
-position: relative;
-text-transform: uppercase;
-display: inline-block;
-font-size: 16px;
-font-weight: 600;
-color: #fff;
-line-height: 130%;
-background: #bda87f;
-letter-spacing: 1.5px;
-padding: 10px 15px;
-margin-bottom: 20px;
-
+  position: relative;
+  text-transform: uppercase;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  line-height: 130%;
+  background: #bda87f;
+  letter-spacing: 1.5px;
+  padding: 10px 15px;
+  margin-bottom: 20px;
 }
 
 .about_us__article-heading:after {
-    
-content: "";
-position: absolute;
-display: block;
-border-bottom: 2px solid #bda87f;
-width: 590px;
-margin-left: -590px;
-margin-top: -7px;
-padding-top: 15px;
-
+  content: "";
+  position: absolute;
+  display: block;
+  border-bottom: 2px solid #bda87f;
+  width: 590px;
+  margin-left: -590px;
+  margin-top: -7px;
+  padding-top: 15px;
 }
 
-.article-title{
-    
-text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
-font-size: 3em;
-padding: 30px 0;
-font-family: Montserrat;
-font-weight: bold;
-
+.article-title {
+  text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
+  font-size: 3em;
+  padding: 30px 0;
+  font-family: Montserrat;
+  font-weight: bold;
 }
-
-
 
 /* Teksti i brendshem me ngjyre ma te leht  */
-.font2{
-
-font-size: 17px;
-color: #808080;
-       
+.font2 {
+  font-size: 17px;
+  color: #808080;
 }
-
-
-
-
-
-
-
-
-
-
 
 /* Meet our team, overlay tekst mbi foto edhe efekti hover */
 
-
-.row{
-       display: flex;
-       width: 100%;
-       justify-content: space-around;
+.row {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
 
 .column {
-       
-       float: left;
-       width: 25%;
-       height: 550px;
-       padding: 2px;
-       display: flex;
-       position: relative;
-       align-items: flex-end;
-       transition: .6s ease-out;
-       box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5) ;
-       background: #fff;
+  float: left;
+  width: 25%;
+  height: 550px;
+  padding: 2px;
+  display: flex;
+  position: relative;
+  align-items: flex-end;
+  transition: 0.6s ease-out;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+  background: #fff;
 }
 
-.column img{
-       height: 500px;
+.column img {
+  height: 500px;
 }
 
-
-.column:hover{
-       transform: translateY(15px);
+.column:hover {
+  transform: translateY(15px);
 }
 
-
-.column:hover:before{
-       opacity: 1;
+.column:hover:before {
+  opacity: 1;
 }
 
-.column:hover .tekst_overlay{
-
-       opacity: 1;
-       transform: translateY(0);
+.column:hover .tekst_overlay {
+  opacity: 1;
+  transform: translateY(0);
 }
 
-
-.column:before{
-       content: '';
-       position: absolute;
-       top: 0;
-       left: 0;
-       display: block;
-       width: 100%;
-       height: 100%;
-       background: linear-gradient(to top, black, transparent );
-       z-index: 2;
-       transition: 0.6s;
-       opacity: 0;
+.column:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, black, transparent);
+  z-index: 2;
+  transition: 0.6s;
+  opacity: 0;
 }
 
-.column img{
-       width: 100%;
-       height: 100%;
-       position: absolute;
-       top: 0;
-       left: 0;
-       object-fit: cover;
+.column img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
 }
 
-.column .tekst_overlay{
-       position: relative;
-       z-index: 3;
-       color: white;
-       opacity: 0;
-       transform: translateY(60px);
-       transition: 0.5s;
+.column .tekst_overlay {
+  position: relative;
+  z-index: 3;
+  color: white;
+  opacity: 0;
+  transform: translateY(60px);
+  transition: 0.5s;
 }
 
-.tekst_overlay h2{
-       font-size: 40px;
-       margin: 0;
-       font-family: Shkrikhand;
-       letter-spacing: 3px;
-
-
+.tekst_overlay h2 {
+  font-size: 40px;
+  margin: 0;
+  font-family: Shkrikhand;
+  letter-spacing: 3px;
 }
 
-.tekst_overlay h3{
-
-       font-size: 20px;
-       margin-top: 8px;
-       margin-left: 0;
-       font-family: sans-serif;
+.tekst_overlay h3 {
+  font-size: 20px;
+  margin-top: 8px;
+  margin-left: 0;
+  font-family: sans-serif;
 }
 
-.tekst_overlay p{
-       font-size: 15px;
-       margin-top: 8px;
-       margin-left: 0;
-       font-family: sans-serif;
+.tekst_overlay p {
+  font-size: 15px;
+  margin-top: 8px;
+  margin-left: 0;
+  font-family: sans-serif;
 }
 
-.tekst_overlay a i{
-       color: #fff;
-       padding: 6px 8px;
+.tekst_overlay a i {
+  color: #fff;
+  padding: 6px 8px;
 }
-
- 
-
-
-
-
-
-
-
-
-
-
 
 /* BOXES, qe jane te special prices */
 
-
-
-.Apartamenti{
-    font-family: sans-serif;
-    font-size: 30px;
-    text-align: left;
-    font-weight: 600;
+.Apartamenti {
+  font-family: sans-serif;
+  font-size: 30px;
+  text-align: left;
+  font-weight: 600;
 }
 
-.cmimi{
-    font-family: sans-serif;
-    font-size: 30px;
-    box-shadow:0 0 5px gray;
+.cmimi {
+  font-family: sans-serif;
+  font-size: 30px;
+  box-shadow: 0 0 5px gray;
 }
 
-.m_katror{
-    font-family: sans-serif;
-    padding: 5px;
-    font-size: 25px;
-    border-bottom: 1px solid lightgray ;
+.m_katror {
+  font-family: sans-serif;
+  padding: 5px;
+  font-size: 25px;
+  border-bottom: 1px solid lightgray;
 }
 
-.box:hover{
-    background-color:f5f5ef;
-    cursor: pointer;
-    transform: scale(1.03);
-    transition: all 0.5s ease ;
+.box:hover {
+  background-color: f5f5ef;
+  cursor: pointer;
+  transform: scale(1.03);
+  transition: all 0.5s ease;
 }
 
-.box2:hover{
-    background-color:f5f5ef;
-    cursor: pointer;
-    transform: scale(1.03);
-    transition: all 0.5s ease ;
-
+.box2:hover {
+  background-color: f5f5ef;
+  cursor: pointer;
+  transform: scale(1.03);
+  transition: all 0.5s ease;
 }
-
-
-
-
-
-
-
 
 /*Pjesa e fundit, para footerit, "Great Clients" me foto levizese.*/
 
-
 .heading {
-            position: relative;
-            text-transform: uppercase;
-            display: inline-block;
-            font-size: 16px;
-            font-weight: 600;
-            color: #fff;
-            line-height: 130%;
-            background: #bda87f;
-            letter-spacing: 1.5px;
-            padding: 10px 15px;
-            margin-bottom: 20px;
-            margin-left: 150px;
-      
-        }
-          
-              
+  position: relative;
+  text-transform: uppercase;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  line-height: 130%;
+  background: #bda87f;
+  letter-spacing: 1.5px;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  margin-left: 150px;
+}
+
 .heading:after {
-            content: "";
-            position: absolute;
-            display: block;
-            border-bottom: 2px solid #bda87f;
-            width: 590px;
-            margin-left: -590px;
-            margin-top: -7px;
-            padding-top: 15px;
-        }
-        
-        
-.article-titll{
-    
-            text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
-            font-size: 3em;
-            padding: 30px 0;
-            font-family: Montserrat;
-            font-weight: bold;
-            margin-left: 150px;
-       }
+  content: "";
+  position: absolute;
+  display: block;
+  border-bottom: 2px solid #bda87f;
+  width: 590px;
+  margin-left: -590px;
+  margin-top: -7px;
+  padding-top: 15px;
+}
 
+.article-titll {
+  text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
+  font-size: 3em;
+  padding: 30px 0;
+  font-family: Montserrat;
+  font-weight: bold;
+  margin-left: 150px;
+}
 
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+}
+.footer {
+  background-color: #1d1d1d;
+  color: white;
+}
 
+footer div h4:after {
+  content: "";
+  display: block;
+  width: 40%;
+  height: 1px;
+  background: #fff;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
 
+.footer-content div {
+  max-width: 25%;
+  padding: 40px 0;
+}
 
+.footer-content__main {
+  font-size: 14px;
+}
+
+.footer-content__main p {
+  padding: 20px 0 5px;
+}
+
+.footer-copyright {
+  font-size: 13px;
+  padding-top: 0;
+}
+
+.footer-site-map ul li,
+.footer-contact-us ul li,
+.footer-visit-us ul li,
+.footer-search ul li {
+  list-style-type: none;
+  padding: 5px 0;
+}
+
+.footer-site-map ul li:first-child,
+.footer-contact-us ul li:first-child,
+.footer-visit-us ul li:first-child,
+.about__us-style__lists {
+  padding-top: 20px;
+}
+
+.footer-site-map ul li a,
+.footer-contact-us ul li a,
+.footer-search ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+.search {
+  margin: 15px 0;
+}
+
+input[type="text"] {
+  padding: 10px 30px 10px 5px;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: #2d2d2d;
+}
+
+input[type="text"]::placeholder {
+  color: white;
+}
+
+.nested-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
