--- a/css/home.css
+++ b/css/home.css
@@ -10,52 +10,10 @@
   margin: 0 auto;
 }
 
-.header,
-.navbar,
 .company-stats-info-details {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.header {
-  padding: 10px 0;
-}
-
-.dropdown .dropdown__main a {
-  font-size: 14px;
-  text-decoration: none;
-  padding: 33px 20px;
-  color: black;
-  background-color: rgba(255, 255, 255, 0.5);
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  margin-top: 33px;
-  min-width: 160px;
-  background-color: rgba(255, 255, 255, 0.7);
-  box-shadow: 0px 3px 5px -1px #ccc;
-  z-index: 1;
-}
-
-.dropdown-content a {
-  display: block;
-  padding: 12px 16px;
-  color: black;
-  text-decoration: none;
-  text-align: left;
-  font-size: 12px;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown__main a:hover,
-.dropdown-content a:hover {
-  color: rgb(73, 62, 224);
 }
 
 .about_us__article {
@@ -124,8 +82,7 @@
 
 .about_us__article-info,
 .latest_news__article-news,
-.special-prices__article-offers,
-.footer-content {
+.special-prices__article-offers {
   display: flex;
   justify-content: space-between;
 }
@@ -414,99 +371,4 @@
   bottom: 0;
   margin-top: 10px;
   background: #dadada;
-}
-
-.footer {
-  background-color: #1d1d1d;
-  color: white;
-}
-
-footer div h4:after {
-  content: "";
-  display: block;
-  width: 40%;
-  height: 1px;
-  background: #fff;
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-
-.footer-content div {
-  max-width: 25%;
-  padding: 40px 0;
-}
-
-.footer-content__main {
-  font-size: 14px;
-}
-
-.footer-content__main p {
-  padding: 20px 0 5px;
-}
-
-.footer-copyright {
-  font-size: 13px;
-  padding-top: 0;
-}
-
-.footer-site-map ul li,
-.footer-contact-us ul li,
-.footer-visit-us ul li,
-.footer-search ul li {
-  list-style-type: none;
-  padding: 5px 0;
-}
-
-.footer-site-map ul li:first-child,
-.footer-contact-us ul li:first-child,
-.footer-visit-us ul li:first-child,
-.about__us-style__lists {
-  padding-top: 20px;
-}
-
-.footer-site-map ul li a,
-.footer-contact-us ul li a,
-.footer-search ul li a {
-  text-decoration: none;
-  color: white;
-}
-
-.search {
-  margin: 15px 0;
-}
-
-input[type="text"] {
-  padding: 10px 30px 10px 5px;
-  border: none;
-  outline: none;
-  color: white;
-  background-color: #2d2d2d;
-}
-
-input[type="text"]::placeholder {
-  color: white;
-}
-
-.nested-list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.scroll-to-top {
-  position: fixed;
-  right: 40px;
-  bottom: 40px;
-  height: 50px;
-  width: 50px;
-  margin: 0;
-  padding: 0;
-  background-color: #bda87f;
-  border-radius: 50%;
-  box-shadow: 0px 1px 2px 2px rgb(165, 163, 163);
-  z-index: 4;
-}
-
-.up-arrow {
-  padding: 25%;
 }
