--- a/about.css
+++ b/about.css
@@ -113,8 +113,6 @@
   #square4 {
     display: inline-block;
     position: relative;
-    height: 100px;
-    /* margin-left: 50px; */
     width: 550px;
     margin-top: 0px;
     background-color: #fff;
@@ -160,6 +158,15 @@
     word-wrap:break-word;
     
   }
+
+  .font2_ {
+    font-size: 19px;
+    color: #808080;
+    font-family: 'Montserrat';
+    letter-spacing: 0.01cm;
+
+  }
+
   /* Meet our team, overlay tekst mbi foto edhe efekti hover */
   .row {
     display: flex;
@@ -242,6 +249,114 @@
     color: #fff;
     padding: 6px 8px;
   }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  .quotes {
+    background: url(http://specthemes.com/dreamhouse-template/dreamhouse/img/bg/bg4.jpg)
+      no-repeat center center fixed;
+    background-size: cover;
+    height: 300px;
+    color: white;
+    padding: 150px 80px;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+   overflow: hidden;
+   
+
+
+
+  }
+
+  
+  .h4_{
+    font-family: 'Montserrat';
+    line-height: 1.3;
+    font-size: 40px;
+    margin-bottom: 10px;
+    font-weight: lighter;
+    letter-spacing: 0.05cm;
+    /* font-style: italic; */
+
+
+  }
+
+  .h6_{
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.3;
+    font-size: 15px;
+    margin-bottom: 10px;
+    font-weight: 700;
+    /* font-style: italic; */
+    color: gray;
+    letter-spacing: 0.1cm;
+  }
+  
+  .P_{
+    font-size: 20px;
+    font-family: 'Montserrat';
+    letter-spacing: 0.01cm;
+  }
+  
+  
+  #quotes-slider{
+    display: inline-flex;
+    margin-left: 2px;
+    
+  
+   
+  }
+  
+  
+  
+  
+  
+  
+  .first_sketchs{
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   /* BOXES, qe jane te special prices */
   .Apartamenti {
     font-family: sans-serif;
@@ -374,5 +489,60 @@
   .nested-list {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+  }
+
+
+  .scroll-to-top {
+    position: fixed;
+    right: 40px;
+    bottom: 40px;
+    height: 50px;
+    width: 50px;
+    margin: 0;
+    padding: 0;
+    background-color: #bda87f;
+    border-radius: 50%;
+    box-shadow: 0px 1px 2px 2px rgb(165, 163, 163);
+    z-index: 4;
+  }
+  
+  .up-arrow {
+    padding: 25%;
+  }
+
+  .buttons{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+  .hide-btn, #hide{
+    margin-right: 10px;
+    background-color: lightgray ;
+    padding: 5px;
+    border-radius: 10px;
+    font-family: 'Montserrat';
+    font-weight:bold ;
+    letter-spacing: 0.5px;
+    font-size: 15px;
+
+  }
+
+  .show-btn, #show{
+    margin-right: 10px;
+    background-color: lightgray ;
+    padding: 5px;
+    border-radius: 10px;
+    font-family: 'Montserrat';
+    font-weight:bold ;
+    letter-spacing: 0.5px;
+    font-size: 15px;
+
+  }
+  .parag{
+    display: flex;
+    justify-content: center;
     align-items: center;
   }
