--- a/blog_list.css
+++ b/blog_list.css
@@ -59,6 +59,8 @@
 
 
 
+
+
   
   /* Pjesa e prezantimit te faqes Blog Grid      */
   
@@ -154,6 +156,9 @@
     word-break: break-all;
   }
   
+
+
+
   /*
   Row eshte klasa e div-it qe permban linkun Admin, daten dhe butonin Read More*/
   .row {
@@ -323,3 +328,98 @@
     justify-content: space-between;
     align-items: center;
   }
+
+
+
+  /* scroll up */
+
+  .scroll-to-top {
+    position: fixed;
+    right: 40px;
+    bottom: 40px;
+    height: 50px;
+    width: 50px;
+    margin: 0;
+    padding: 0;
+    background-color: #bda87f;
+    border-radius: 50%;
+    box-shadow: 0px 1px 2px 2px rgb(165, 163, 163);
+    z-index: 4;
+  }
+  
+  .up-arrow {
+    padding: 25%;
+  }
+
+
+
+
+
+  /* Pjesa e CSS per animation effect */
+
+  .hr{
+    background-color:  #bda87f;
+    width: 100px;
+    margin-left: 15px;
+   }
+
+
+    .service_planning{
+       background-color: #333333;
+       color: white;
+       border-radius: 10px;
+       margin-left: 10px;
+       /* height: 400px; */
+       /* width: 600px; */
+
+    }
+
+    .service_planning_heading{
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 30px;
+      font-weight: 500;
+      height: 50px;
+      margin-top: 20px;
+      margin-left: 30px;
+    
+    }
+
+    .lista_service_planning{
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 20px;
+      font-weight: 300;
+      margin-left: 60px;
+      /* display: flex; */
+    }
+
+    .show-SERVICE-planning{
+      font-family: sans-serif;
+    letter-spacing: 1px;
+    font-size: 20px;
+    padding: 15px;
+
+    }
+    .numrat{
+      color: #bda87f;
+    }
+
+    .button_service{
+      margin-right: 10px;
+    background-color: lightgray ;
+    padding: 5px;
+    border-radius: 10px;
+    font-family: 'Montserrat';
+    font-weight:bold ;
+    letter-spacing: 0.5px;
+    font-size: 15px;
+    
+    }
+
+    .diviiii{
+      margin-left: 150px;
+      display: flex;
+      justify-content: center;
+      margin-bottom: 50px;
+    }
+
+  
