--- a/css/home_image.css
+++ b/css/home_image.css
@@ -321,6 +321,7 @@
   background-color: white;
 }
 input[type="text"] {
+  margin-top: 10px;
   padding: 10px 30px 10px 5px;
   border-radius: 30px;
   border: none;
